--- a/index.html
+++ b/index.html
@@ -1,15 +1,99 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>My CV-page</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="styles" href="styles.css">
-    </head>
-    <body>
+<html lang="en">
 
-        <script src="" async defer></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <header>
+        <div class="container header-container">
+            <div class="flex-left">
+                <div class="banner">
+                    <img src="images/profil.jpg" alt="Profile Image" class="profile-image">
+                    <div class="header-text">
+                        <h1>David Ruland</h1>
+                        <p>App developer & System developer</p>
+                    </div>
+                </div>
+                <div class="contact-info">
+                    <ul>
+                        <li><i class="fa fa-phone"></i> (46)XXXX</li>
+                        <li><i class="fa fa-envelope"></i> david.ruland@example.com</li>
+                        <li><i class="fa fa-home"></i> Malmö</li>
+                        <li><i class="fa fa-linkedin"></i> linkedin.com/in/David Ruland</li>
+                    </ul>
+                </div>
+                <div class="language">
+                    <h2>Language</h2>
+                    <ul>
+                        <li>Swedish</li>
+                        <li>English</li>
+                    </ul>
+                </div>
+                <div class="expertise">
+                    <h2>Expertise</h2>
+                    <ul>
+                        <li>Java</li>
+                        <li>C# with XNA Game studio</li>
+                        <li>C++</li>
+                        <li>Unreal Engine 4 with blueprint and c++ code</li>
+                        <li>Swift</li>
+                        <li>SwiftUI</li>
+                        <li>Kotlin</li>
+                        <li>Flutter/Dart</li>
+                        <li>HTML</li>
+                        <li>C# Asp Net Core</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="flex-right">
+                <section class="experience">
+                    <h2>Work Experience</h2>
+                    <div class="job">
+                        <h3>Omegapoint - Malmö</h3>
+                        <p>App developer | 2020-02-18 – 2023-11-11</p>
+                        <ul>
+                            <li>Developed and implemented an iOS app in Swift 4 with storyboards to Ikano Bank .
+                            </li>
+                            <li>Developed and implemented an iOS and Android app in Flutter for Lund University. </li>
+                            <li>Developed and implemented an iOS and Android app in Flutter for Lund University.</li>
+                        </ul>
+                        <h3>Grabbarna Grus Beach Club</h3>
+                        <p>App developer/Assignment | 2019-05-01 – 2019-06-01</p>
+                        <h3>ÅF</h3>
+                        <p>App developer/internship | 2019-04-04 – 2019-06 </p>
+                        <h3>CGI</h3>
+                        <p>IT-support| 2018-2019 </p>
+                    </div>
+                </section>
+                <section class="education">
+                    <h2>Education</h2>
+                    <div class="z">
+                        <h3>Bachelor's degree in  Computer Science at Malmö University</h2>
+                        <h3>Advanced programming for Iphone and Android at Malmö Yrkeshögskola. </h3>
+                    </div>
+                </section>
+                <section class="skills-summary">
+                    <h2>Skills Summary</h2>
+                    <div class="skill">
+                        <p>App developer <progress max="100" value="100"></progress> 100%</p>
+                        <p>IT-support<progress max="100" value="80"></progress> 8%0%</p>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </header>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 David Ruland</p>
+        </div>
+    </footer>
+</body>
+
 </html>
