Update css style, index.htm and added a readme text

--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
                 <div class="banner">
                     <img src="images/profil.jpg" alt="Profile Image" class="profile-image">
                     <div class="header-text">
-                        <h1>David Ruland</h1>
-                        <p>App developer & System developer</p>
+                        <h1 class="first-name">David</h1>
+                        <h2 class="last-name">Ruland</h2>
+                        <h3 class="role">App developer</h3>
                     </div>
+                </div>
+                <div class="about">
+                    <h1>About me</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
                 <div class="contact-info">
                     <ul>
@@ -53,7 +62,7 @@
             </div>
             <div class="flex-right">
                 <section class="experience">
-                    <h2>Work Experience</h2>
+                    <h2>Experience</h2>
                     <div class="job">
                         <h3>Omegapoint - Malmö</h3>
                         <p>App developer | 2020-02-18 – 2023-11-11</p>
@@ -73,10 +82,8 @@
                 </section>
                 <section class="education">
                     <h2>Education</h2>
-                    <div class="z">
-                        <h3>Bachelor's degree in  Computer Science at Malmö University</h2>
+                    <h3>Bachelor's degree in Computer Science at Malmö University</h2>
                         <h3>Advanced programming for Iphone and Android at Malmö Yrkeshögskola. </h3>
-                    </div>
                 </section>
                 <section class="skills-summary">
                     <h2>Skills Summary</h2>
